--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"scripts": {
 		"prebuild": "shx rm -rf dist",
 		"build": "tsc",
-		"pretest": "npm run build && tsc -p tests",
-		"test": "mocha",
+		"pretest": "npm run build",
+		"test": "mocha -r tsx tests/**/*.test.ts",
 		"prepare": "npm run build",
 		"pack": "npm pack",
 		"prepublishOnly": "npm test"
@@ -24,7 +24,8 @@
 		"chai": "^5.2.0",
 		"mocha": "^11.1.0",
 		"sinon": "^19.0.2",
-		"tsx": "^3.12.10",
+		"tslib": "^2.8.1",
+		"tsx": "^3.14.0",
 		"typescript": "^5.8.2"
 	},
 	"dependencies": {
