--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
 	"compilerOptions": {
-		"target": "es2016",
-		"module": "CommonJS",
 		"rootDir": "./src",
 		"outDir": "./dist",
-		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"skipLibCheck": true,
-		"declaration": true
+		"declaration": true,
+		"target": "es2016",
+		"module": "CommonJS",
+		"esModuleInterop": true,
+		"moduleResolution": "node"
 	},
 	"include": ["src/**/*"]
 }
