--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
+		"start": "tsx src/index.ts",
 		"prebuild": "shx rm -rf dist",
 		"build": "tsc",
 		"pretest": "npm run build",
