--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"declaration": true,
-		"target": "es2016",
+		"target": "ES6",
 		"module": "CommonJS",
 		"esModuleInterop": true,
 		"moduleResolution": "node"
